src/objects/VApexC__c.object
<CustomObject>
    <fields>
        <fullName>BudgetManagerDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Manager Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DomainMatchDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain Match Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lost_Deal_Survey_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lost Deal Survey Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Net_FSR_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Net FSR Calculation Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Forecast_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opportunity Forecast Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProjectCreationDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project Creation Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Target_Manager_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Target Manager Disabled</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>Setting_Overview</fullName>
        <columns>SETUP_OWNER_NAME</columns>
        <columns>SETUP_TYPE</columns>
        <columns>Net_FSR_Disabled__c</columns>
        <columns>Opportunity_Forecast_Disabled__c</columns>
        <columns>Target_Manager_Disabled__c</columns>
        <columns>BudgetManagerDisabled__c</columns>
        <columns>Lost_Deal_Survey_Disabled__c</columns>
        <columns>ProjectCreationDisabled__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Setting Overview</label>
        <language>en_US</language>
    </listViews>
</CustomObject>